minor grammar changes, some renaming, code clean up