@@ -15,34 +15,34 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package io.sapl.test.dsl.interpreter;
 
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 import io.sapl.test.integration.SaplIntegrationTestFixture;
 import java.util.Collections;
-import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class SaplIntegrationTestFixtureFactoryTest {
 
     @Test
-    void create_constructsInstanceOfSaplIntegrationTestFixtureWithPolicyPath_returnsSaplIntegrationTestFixture() {
+    void create_constructsInstanceOfSaplIntegrationTestFixtureWithFolderPath_returnsSaplIntegrationTestFixture() {
         final var result = SaplIntegrationTestFixtureFactory.create("path");
 
         assertInstanceOf(SaplIntegrationTestFixture.class, result);
     }
 
     @Test
-    void create_constructsInstanceOfSaplIntegrationTestFixtureWithPDPConfigAndPaths_returnsSaplIntegrationTestFixture() {
+    void create_constructsInstanceOfSaplIntegrationTestFixtureWithPDPConfigAndPolicyPaths_returnsSaplIntegrationTestFixture() {
         final var result = SaplIntegrationTestFixtureFactory.create("pdpConfigPath", Collections.emptyList());
 
         assertInstanceOf(SaplIntegrationTestFixture.class, result);
     }
 
     @Test
-    void createFromInputStrings_constructsInstanceOfSaplIntegrationTestFixtureWithInputStrings_returnsSaplIntegrationTestFixture() {
-        final var result = SaplIntegrationTestFixtureFactory.createFromInputStrings(List.of(), "");
+    void createFromInputStrings_constructsInstanceOfSaplIntegrationTestFixtureWithInputStringsAndPdpConfigInputString_returnsSaplIntegrationTestFixture() {
+        final var result = SaplIntegrationTestFixtureFactory.createFromInputStrings(Collections.emptyList(), "");
 
         assertInstanceOf(SaplIntegrationTestFixture.class, result);
     }
